# HRDIUtilities

./: README.md
DQCoworker/.github/instructions/: copilot-instructions.md  general-coding.instructions.md  python-coding.instructions.md
DQCoworker/.github/prompts/: DQRuleRecommender.prompt.md  DQRuleToCode.prompt.md
FabricCLI/: README.md  TROUBLESHOOTING.md
FabricCLI/.github/instructions/: python-coding.instructions.md
FabricCLI/.github/prompts/: fabric-cli-deploy.prompt.md
FabricCLI/Code/Fabric/: README.md
FabricCLI/Config/: fabric_config.json  fabric_config_example.json
FabricCLI/DeploymentScrips/: TROUBLESHOOTING.md  fabric_code_deploy.py  fabric_infra_deploy.py  oneinstaller.py  security_utils.py  shared_logger.py
FabricCLI/Logs2/: deployment_log_sample.csv
FabricCLI/Plugin/fabric-cli-deploy/: CHANGELOG.md  LICENSE  PRIVACY.md  README.md  SECURITY.md
HotfixAgent/: README.md
HotfixAgent/src/: __init__.py
HotfixAgent/src/core/: __init__.py  api_client.py  (+2 more)
MaskIQ/: README.md  end-to-end-flow.md
Prompt2Data/: README.md  prompt2data-workflow-digram.md
PurviewUtilityFramework/: Config.py  README.md  function_app.py  local.settings.json  requirements.txt
PurviewUtilityFramework/Auth/: Client.py
PurviewUtilityFramework/Connector/: Base.py
TompoMCP/: CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml
TompoMCP/src/tompo_mcp/: __init__.py  __main__.py  auth.py  server.py
TompoMCP/src/tompo_mcp/core/: fabric_client.py  lineage.py  links.py  models.py  parser.py
TompoMCP/src/tompo_mcp/viz/: template.html
TompoMCP/tests/: test_core.py
(+34 files in other folders)
